Changed images from jpg to png

--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
 			<p class="photo-caption">//GRAPHIC AND WEB DESIGN</p>
   			<ul class="slides">
 				<li>
-					<img src="img/carsonblack.png" alt="Cars In Hong Kong">
+					<img src="img/other-7.png" alt="Cars In Hong Kong">
 				</li>
 				<li>
 					<img src="img/other-1.png" alt="Cycler">
 				</li>
 				<li>
-					<img src="img/hk.png" alt="Hong Kong">
+					<img src="img/other-8.png" alt="Hong Kong">
 				</li>
 				<li>
 					<img src="img/other-2.png" alt="Berries">
@@ -138,13 +138,13 @@
 			<p class="photo-caption">//ILLUSTRATION</p>
   			<ul class="slides">
 				<li>
-					<img src="img/carsonblack.png" alt="Cars In Hong Kong">
+					<img src="img/other-7.png" alt="Cars In Hong Kong">
 				</li>
 				<li>
 					<img src="img/other-1.png" alt="Cycler">
 				</li>
 				<li>
-					<img src="img/hk.png" alt="Hong Kong">
+					<img src="img/other-8.png" alt="Hong Kong">
 				</li>
 				<li>
 					<img src="img/other-2.png" alt="Berries">
@@ -165,7 +165,7 @@
 				<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>
 				<li><a href="https://twitter.com/"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
 			</ul>
-			<a href="#home"><img src="img/top.svg" alt="Top Button"></a>
+			<a class="slideDown ease-all top-btn" href="#home"><img src="img/top.svg" alt="Top Button"></a>
 		</div>
 			<p>©2014 Katie Situ</p> 
 	</footer>
