Changed photo sizes

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="photo-caption">//LANDSCAPE AND NATURE</p>
+			<p class="photo-caption">//LANDSCAPE &#38; NATURE</p>
   			<ul class="slides">
 				<li>
 					<img src="img/other-7.png" alt="Cars In Hong Kong">
@@ -115,7 +115,7 @@
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="photo-caption">//GRAPHIC AND WEB DESIGN</p>
+			<p class="photo-caption">//GRAPHIC &#38; WEB DESIGN</p>
   			<ul class="slides">
 				<li>
 					<img src="img/other-9.png" alt="Hong Kong">
