--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<link rel="author" href="robots.txt" />
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic' rel='stylesheet' type='text/css'>
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-	<link rel="shortcut icon" href="img/logo.svg"/>
+	<link rel="shortcut icon" href="img/logo.png"/>
 </head>
 
 <body>
