--- a/404.html
+++ b/404.html
@@ -8,18 +8,20 @@
 
 <body>
 	<section class="top">
-		<a class="nav-btn hide-text" href="#nav">Navigation</a>
-		<nav class="nav nav-top" data-state="collasped">
+		<div class="nav-logo">
+			<a class="small-logo" href="index.html"><img src="img/logo.svg" alt="Logo Navigation"></a>
 			<ul>
-				<li><a href="index.html">HOME</a></li>
-				<li><a href="portfolio">PORTFOLIO</a></li>
-				<li><a href=".about">CONTACT</a></li>
+				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
+			</ul>
+		</div>
+		<nav class="nav nav-top slideDown" data-state="collasped">
+			<ul>
+				<li class="ease-all"><a href="#home">HOME</a></li>
+				<li class="ease-all"><a href="#about">ABOUT</a></li>
+				<li class="ease-all"><a href="#portfolio">PORTFOLIO</a></li>
+				<li class="ease-all"><a href="#contact">CONTACT</a></li>
 			</ul>	
 		</nav>
-		<div class="error">
-			<h1>404 Error - Page Not Found</h1>
-			<p>Sorry, the page you're looking for is missing.</p>
-		</div>
 	</section>
 	
 	<script src="js/nav.js"></script>
