Adjusted padding for 404

--- a/404.html
+++ b/404.html
@@ -10,18 +10,11 @@
 	<section class="top">
 		<div class="nav-logo">
 			<a class="small-logo" href="index.html"><img src="img/logo.svg" alt="Logo Navigation"></a>
-			<ul>
-				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
-			</ul>
 		</div>
-		<nav class="nav nav-top slideDown" data-state="collasped">
-			<ul>
-				<li class="ease-all"><a href="#home">HOME</a></li>
-				<li class="ease-all"><a href="#about">ABOUT</a></li>
-				<li class="ease-all"><a href="#portfolio">PORTFOLIO</a></li>
-				<li class="ease-all"><a href="#contact">CONTACT</a></li>
-			</ul>	
-		</nav>
+		<div class="error">
+			<h1>404</h1>
+			<h2>Oh no, there's nothing here.</h2>
+		</div>
 	</section>
 	
 	<script src="js/nav.js"></script>
