added meta name

--- a/404.html
+++ b/404.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="handheldfriendly" content="true">
+	<meta name="mobileoptimized" content="240">
 	<title>404 Page</title>
 	<link href="css/main.css" rel="stylesheet">
 </head>
