--- a/404.html
+++ b/404.html
@@ -2,22 +2,16 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="handheldfriendly" content="true">
-	<meta name="mobileoptimized" content="240">
 	<title>404 Page</title>
 	<link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
-	<section class="top">
-		<div class="nav-logo">
-			<a class="small-logo" href="index.html"><img src="img/logo.svg" alt="Logo Navigation"></a>
-		</div>
-		<div class="error">
-			<h1>404</h1>
-			<h2>Oh no, there's nothing here.</h2>
-		</div>
-	</section>
+	<div class="error">
+		<h1>404</h1>
+		<h2>Oh no, there's nothing here.</h2>
+		<p>Click <a href="index.html" style="text-decoration: none"><strong>here</strong></a> to go back</p>
+	</div>
 	
 	<script src="js/nav.js"></script>
 </body>
