--- a/404.html
+++ b/404.html
@@ -3,14 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>404 Page</title>
+	<meta name="handheldfriendly" content="true">
+	<meta name="mobileoptimized" content="240">
 	<link href="css/main.css" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 	<div class="error">
 		<h1>404</h1>
 		<h2>Oh no, there's nothing here.</h2>
-		<p>Click <a href="index.html" style="text-decoration: none"><strong>here</strong></a> to go back</p>
+		<p>Click <a href="index.html" style="text-decoration: none"><strong>here</strong></a> to go back!</p>
 	</div>
 	
 	<script src="js/nav.js"></script>
