Added fade to logo

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 	</section>
 	
 	<section id="home" class="home">
-		<img src="img/logo.svg" alt="Logo">
-		<h5>GRAPHIC DESIGN / PHOTOGRAPHY</h5>
+		<img class="main-logo" src="img/logo.svg" alt="Logo">
+		<h5 class="subhead">GRAPHIC DESIGN / PHOTOGRAPHY</h5>
 	</section>
 	
 	<section id="about" class="about grid">
