--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<section id="portfolio" class="portfolio grid">
 		<h1>PORTFOLIO</h1>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="photo-caption">//PORTRAIT</p>
+			<p class="photo-caption">//ARTIST PROMO PORTRAITS</p>
   			<ul class="slides">
 				<li>
 					<img src="img/dani-7.png" alt="DANI">
