--- a/index.html
+++ b/index.html
@@ -66,13 +66,16 @@
 	<section id="portfolio" class="portfolio grid">
 		<h1>PORTFOLIO</h1>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="photo-caption">YUSSO / ARTIST PROMO PORTRAITS</p>
+			<div class="photo-caption">
+				<h3>YUSSO / ARTIST PROMO PORTRAITS</h3>
+				<p>A photoshoot of Ottawa-based rapper, Yusso for identity promotion. Photos will be used through social media for self-promotion and other promotional use.</p>
+			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/dani-7.png" alt="DANI">
+					<img src="img/eben-8.png" alt="YUSSO">
 				</li>
 				<li>
-					<img src="img/dani-66.png" alt="DANI">
+					<img src="img/eben-7.png" alt="YUSSO">
 				</li>
 				<li>
 					<img src="img/eben-1.png" alt="YUSSO">
@@ -83,28 +86,71 @@
 				<li>
 					<img src="img/eben-12.png" alt="YUSSO">
 				</li>
-				<li>
-					<img src="img/twin-4.png" alt="AYMI">
-				</li>
+			</ul>
+		</div>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<div class="photo-caption">
+				<h3>JEM &#38; DANI / MODEL PORTRAITS</h3>
+				<p>Photoshoots of local models to promote fashion and beauty and can be used for magazines, posters and modeling portfolios.</p>
+			</div>
+  			<ul class="slides">
 				<li>
 					<img src="img/jem-4.png" alt="JEM">
 				</li>
 				<li>
+					<img src="img/jem-1.png" alt="JEM">
+				</li>
+				<li>
+					<img src="img/jem-2.png" alt="JEM">
+				</li>
+				<li>
 					<img src="img/jem-55.png" alt="JEM">
 				</li>
+				<li>
+					<img src="img/dani-7.png" alt="DANI">
+				</li>
+				<li>
+					<img src="img/dani-66.png" alt="DANI">
+				</li>
+				<li>
+					<img src="img/dani-5.png" alt="DANI">
+				</li>
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="photo-caption">//LANDSCAPE &#38; NATURE</p>
+			<div class="photo-caption">
+				<h3>LANDSCAPE &#38; NATURE PHOTOGRAPHY</h3>
+				<p>A variety of street photography, landscapes and nature. These photos were taken on travels and personal vacations. </p>
+			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/other-7.png" alt="Cars In Hong Kong">
+					<img src="img/other-1.png" alt="">
 				</li>
 				<li>
-					<img src="img/other-1.png" alt="Cycler">
+					<img src="img/other-2.png" alt="JEM">
 				</li>
 				<li>
-					<img src="img/other-9.png" alt="Hong Kong">
+					<img src="img/other-3.png" alt="JEM">
+				</li>
+				<li>
+					<img src="img/other-4.png" alt="JEM">
+				</li>
+				<li>
+					<img src="img/other-7.png" alt="DANI">
+				</li>
+				<li>
+					<img src="img/other-9.png" alt="DANI">
+				</li>
+			</ul>
+		</div>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<div class="photo-caption">
+				<h3>XANDER SITU / LOGO DESIGN</h3>
+				<p>A grunge-street style design to represent Ottawa-based DJ, Xander Situ. The design was based on a certain style with <i>paint splats</i> to create a grunge feel. The logo design can be used for promotional merchandising and event posters.</p>
+			</div>
+  			<ul class="slides">
+				<li>
+					<img src="img/other-1.png" alt="Hong Kong">
 				</li>
 				<li>
 					<img src="img/other-2.png" alt="Berries">
@@ -115,24 +161,13 @@
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="photo-caption">//GRAPHIC &#38; WEB DESIGN</p>
+			<div class="photo-caption">
+				<h3>BLACK NINJAS / PRESS KIT</h3>
+				<p>Photoshoots of local models to promote fashion and beauty and can be used for magazines, posters and modeling portfolios.</p>
+			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/other-9.png" alt="Hong Kong">
-				</li>
-				<li>
-					<img src="img/other-2.png" alt="Berries">
-				</li>
-				<li>
-					<img src="img/other-3.png" alt="Ferry Street">
-				</li>
-			</ul>
-		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<p class="photo-caption">//ILLUSTRATION</p>
-  			<ul class="slides">
-				<li>
-					<img src="img/other-1.png" alt="Cycler">
+					<img src="img/press-kit.png" alt="Cycler">
 				</li>
 				<li>
 					<img src="img/other-9.png" alt="Hong Kong">
