Added more photos

--- a/index.html
+++ b/index.html
@@ -150,13 +150,13 @@
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/other-1.png" alt="Hong Kong">
+					<img src="img/xs-1.png" alt="Hong Kong">
 				</li>
 				<li>
-					<img src="img/other-2.png" alt="Berries">
+					<img src="img/xs-2.png" alt="Berries">
 				</li>
 				<li>
-					<img src="img/other-3.png" alt="Ferry Street">
+					<img src="img/xs-3.png" alt="Ferry Street">
 				</li>
 			</ul>
 		</div>
