Added photos and changed slideshow:false

--- a/index.html
+++ b/index.html
@@ -119,6 +119,26 @@
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
+			<h3>AYMI &#38; KELLY / MODEL PORTRAITS</h3>
+				<p>Photoshoots of local models to promote fashion and beauty and can be used for magazines, posters and modeling portfolios.</p>
+			</div>
+  			<ul class="slides">
+				<li>
+					<img src="img/twin-4.png" alt="JEM">
+				</li>
+				<li>
+					<img src="img/twin-3.png" alt="JEM">
+				</li>
+				<li>
+					<img src="img/twin-5.png" alt="JEM">
+				</li>
+				<li>
+					<img src="img/twin-1.png" alt="JEM">
+				</li>
+			</ul>
+		</div>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<div class="photo-caption">
 				<h3>LANDSCAPE &#38; NATURE PHOTOGRAPHY</h3>
 				<p>A variety of street photography, landscapes and nature. These photos were taken on travels and personal vacations. </p>
 			</div>
@@ -163,20 +183,57 @@
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
 				<h3>BLACK NINJAS / PRESS KIT</h3>
-				<p>Photoshoots of local models to promote fashion and beauty and can be used for magazines, posters and modeling portfolios.</p>
+				<p>Black Ninjas is an Ottawa-based DJ duo. The press kit design offers a minimalistic design that suits the duo's style. This consists of an audio sample, press photos, biography, resume, and business cards, all in one. All contents will be within the vinyl style kit that allows for a simple and minimalistic function and design. </p>
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/press-kit.png" alt="Cycler">
+					<img src="img/bn-2.png" alt="Cycler">
 				</li>
 				<li>
-					<img src="img/other-9.png" alt="Hong Kong">
+					<img src="img/bn-3.png" alt="Berries">
 				</li>
 				<li>
-					<img src="img/other-2.png" alt="Berries">
+					<img src="img/bn-1.png" alt="Hong Kong">
 				</li>
 				<li>
-					<img src="img/other-3.png" alt="Ferry Street">
+					<img src="img/bn-4.png" alt="Ferry Street">
+				</li>
+			</ul>
+		</div>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<div class="photo-caption">
+				<h3>XANDER SITU / LOGO DESIGN</h3>
+				<p>A grunge-street style design to represent Ottawa-based DJ, Xander Situ. The design was based on a certain style with <i>paint splats</i> to create a grunge feel. The logo design can be used for promotional merchandising and event posters.</p>
+			</div>
+  			<ul class="slides">
+				<li>
+					<img src="img/xs-1.png" alt="Hong Kong">
+				</li>
+				<li>
+					<img src="img/xs-2.png" alt="Berries">
+				</li>
+				<li>
+					<img src="img/xs-3.png" alt="Ferry Street">
+				</li>
+			</ul>
+		</div>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<div class="photo-caption">
+				<h3>BLACK NINJAS / PRESS KIT</h3>
+				<p>Black Ninjas is an Ottawa-based DJ duo. The press kit design offers a minimalistic design that suits the duo's style. This consists of an audio sample, press photos, biography, resume, and business cards, all in one. All contents will be within the vinyl style kit that allows for a simple and minimalistic function and design. </p>
+			</div>
+  			<ul class="slides">
+				<li>
+					<img src="img/bn-2.png" alt="Cycler">
+				</li>
+				<li>
+					<img src="img/bn-3.png" alt="Berries">
+				</li>
+				<li>
+					<img src="img/bn-1.png" alt="Hong Kong">
+				</li>
+				<li>
+					<img src="img/bn-4.png" alt="Ferry Street">
 				</li>
 			</ul>
 		</div>
