Added photos for app design and info about it

--- a/index.html
+++ b/index.html
@@ -202,18 +202,18 @@
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
-				<h3>XANDER SITU / LOGO DESIGN</h3>
-				<p>A grunge-street style design to represent Ottawa-based DJ, Xander Situ. The design was based on a certain style with <i>paint splats</i> to create a grunge feel. The logo design can be used for promotional merchandising and event posters.</p>
+				<h3>INSTRUMENTOR / UI APP DESIGN</h3>
+				<p>Instrumentor a is digital mentoring app that lets growing musicians learn to play musical instruments. The design consists of strong and bold colours that hold a sense of motivation with its powerful palette. The design elements are very modern and minimalistic. Together, it creates a refreshingly daring personality that targets an older audience. </p>
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/xs-1.png" alt="Hong Kong">
+					<img src="img/app-1.png" alt="Hong Kong">
 				</li>
 				<li>
-					<img src="img/xs-2.png" alt="Berries">
+					<img src="img/app-2.png" alt="Berries">
 				</li>
 				<li>
-					<img src="img/xs-3.png" alt="Ferry Street">
+					<img src="img/app-3.png" alt="Ferry Street">
 				</li>
 			</ul>
 		</div>
