--- a/index.html
+++ b/index.html
@@ -215,6 +215,9 @@
 				<li>
 					<img src="img/app-3.png" alt="Ferry Street">
 				</li>
+				<li>
+					<img src="img/app-4.png" alt="Ferry Street">
+				</li>
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
