--- a/index.html
+++ b/index.html
@@ -222,21 +222,15 @@
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
-				<h3>BLACK NINJAS / PRESS KIT</h3>
-				<p>Black Ninjas is an Ottawa-based DJ duo. The press kit design offers a minimalistic design that suits the duo's style. This consists of an audio sample, press photos, biography, resume, and business cards, all in one. All contents will be within the vinyl style kit that allows for a simple and minimalistic function and design. </p>
+				<h3>VISUAL MEMORIES / PHOTOBOOK</h3>
+				<p>Visual Memories is a photography book that showcases my own photography. It will include a short introduction of each album and multiple photos of the album. The photos will include portrait, landscape, and nature.</p>
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/bn-2.png" alt="Cycler">
+					<img src="img/pb-1.png" alt="Cycler">
 				</li>
 				<li>
-					<img src="img/bn-3.png" alt="Berries">
-				</li>
-				<li>
-					<img src="img/bn-1.png" alt="Hong Kong">
-				</li>
-				<li>
-					<img src="img/bn-4.png" alt="Ferry Street">
+					<img src="img/pb-2.png" alt="Berries">
 				</li>
 			</ul>
 		</div>
