Added behance icon

--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
 			<ul class="social">
 				<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>
 				<li><a href="https://twitter.com/"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
+				<li><a href="https://www.behance.net/kaesitu"><i class="fa fa-behance"></i><span class="hide-text">Twitter</span></a></li>
 			</ul>
 			<a class="slideDown ease-all top-btn" href="#home"><img src="img/top.svg" alt="Top Button"></a>
 		</div>
