--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
 	<title>404 Page</title>
 	<meta name="handheldfriendly" content="true">
 	<meta name="mobileoptimized" content="240">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<link href="css/main.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic' rel='stylesheet' type='text/css'>
 </head>
