Changed names and edited content for website

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
 				<h3>YUSSO / ARTIST PROMO PORTRAITS</h3>
-				<p>A photoshoot of Ottawa-based rapper, Yusso for identity promotion. Photos will be used through social media for self-promotion and other promotional use.</p>
+				<p>A photoshoot of Ottawa-based rapper, Yusso taken for identity promotion. Photos will be used through social media for self-promotion and other promotional use.</p>
 			</div>
   			<ul class="slides">
 				<li>
@@ -91,7 +91,7 @@
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
 				<h3>JEM &#38; DANI / MODEL PORTRAITS</h3>
-				<p>Photoshoots of local models to promote fashion and beauty and can be used for magazines, posters and modeling portfolios.</p>
+				<p>Photoshoots of local models to promote fashion and beauty. These photos can be used for magazines, posters and modeling portfolios.</p>
 			</div>
   			<ul class="slides">
 				<li>
@@ -120,46 +120,46 @@
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
 			<h3>AYMI &#38; KELLY / MODEL PORTRAITS</h3>
-				<p>Photoshoots of local models to promote fashion and beauty and can be used for magazines, posters and modeling portfolios.</p>
+				<p>Photoshoots of local models to promote fashion and beauty. These photos can be used for magazines, posters and modeling portfolios.</p>
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/twin-4.png" alt="JEM">
+					<img src="img/twin-4.png" alt="AYMI">
 				</li>
 				<li>
-					<img src="img/twin-3.png" alt="JEM">
+					<img src="img/twin-3.png" alt="AYMI">
 				</li>
 				<li>
-					<img src="img/twin-5.png" alt="JEM">
+					<img src="img/twin-5.png" alt="AYMI">
 				</li>
 				<li>
-					<img src="img/twin-1.png" alt="JEM">
+					<img src="img/twin-1.png" alt="AYMI">
 				</li>
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
 				<h3>LANDSCAPE &#38; NATURE PHOTOGRAPHY</h3>
-				<p>A variety of street photography, landscapes and nature. These photos were taken on travels and personal vacations. </p>
+				<p>A variety of street photography, landscapes and nature. These photos were taken on travels and personal adventures.</p>
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/other-1.png" alt="">
+					<img src="img/other-1.png" alt="HONG KONG LADY">
 				</li>
 				<li>
-					<img src="img/other-2.png" alt="JEM">
+					<img src="img/other-2.png" alt="CYCLER">
 				</li>
 				<li>
-					<img src="img/other-3.png" alt="JEM">
+					<img src="img/other-3.png" alt="BERRIES">
 				</li>
 				<li>
-					<img src="img/other-4.png" alt="JEM">
+					<img src="img/other-4.png" alt="FERRY STREET">
 				</li>
 				<li>
-					<img src="img/other-7.png" alt="DANI">
+					<img src="img/other-7.png" alt="GRASS AND FLOWERS">
 				</li>
 				<li>
-					<img src="img/other-9.png" alt="DANI">
+					<img src="img/other-9.png" alt="HONG KONG CARS">
 				</li>
 			</ul>
 		</div>
@@ -170,67 +170,67 @@
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/xs-1.png" alt="Hong Kong">
+					<img src="img/xs-1.png" alt="Business Card">
 				</li>
 				<li>
-					<img src="img/xs-2.png" alt="Berries">
+					<img src="img/xs-2.png" alt="Stamp">
 				</li>
 				<li>
-					<img src="img/xs-3.png" alt="Ferry Street">
+					<img src="img/xs-3.png" alt="T-Shirt">
 				</li>
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
 				<h3>BLACK NINJAS / PRESS KIT</h3>
-				<p>Black Ninjas is an Ottawa-based DJ duo. The press kit design offers a minimalistic design that suits the duo's style. This consists of an audio sample, press photos, biography, resume, and business cards, all in one. All contents will be within the vinyl style kit that allows for a simple and minimalistic function and design. </p>
+				<p>Black Ninjas is an Ottawa-based DJ duo. The press kit design offers a minimalistic design that suits the duo's style. This consists of an audio sample, press photos, biography, resume, and business cards all in one. All contents will be within the vinyl style kit that allows for a simple and minimalistic function and design. </p>
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/bn-2.png" alt="Cycler">
+					<img src="img/bn-1.png" alt="Press Kit">
 				</li>
 				<li>
-					<img src="img/bn-3.png" alt="Berries">
+					<img src="img/bn-3.png" alt="Poster">
 				</li>
 				<li>
-					<img src="img/bn-1.png" alt="Hong Kong">
+					<img src="img/bn-2.png" alt="Vinyl">
 				</li>
 				<li>
-					<img src="img/bn-4.png" alt="Ferry Street">
+					<img src="img/bn-4.png" alt="Logo">
 				</li>
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
 				<h3>INSTRUMENTOR / UI APP DESIGN</h3>
-				<p>Instrumentor a is digital mentoring app that lets growing musicians learn to play musical instruments. The design consists of strong and bold colours that hold a sense of motivation with its powerful palette. The design elements are very modern and minimalistic. Together, it creates a refreshingly daring personality that targets an older audience. </p>
+				<p>Instrumentor is a digital mentoring app that lets growing musicians learn to play musical instruments. The design consists of strong and bold colours that hold a sense of motivation with its powerful palette. The design elements are very modern and minimalistic. Together, it creates a refreshingly daring personality that targets their audience. </p>
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/app-1.png" alt="Hong Kong">
+					<img src="img/app-2.png" alt="Instrumentor Overview">
 				</li>
 				<li>
-					<img src="img/app-2.png" alt="Berries">
+					<img src="img/app-1.png" alt="Song List">
 				</li>
 				<li>
-					<img src="img/app-3.png" alt="Ferry Street">
+					<img src="img/app-3.png" alt="Instrument Icons">
 				</li>
 				<li>
-					<img src="img/app-4.png" alt="Ferry Street">
+					<img src="img/app-4.png" alt="Play and record">
 				</li>
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
 				<h3>VISUAL MEMORIES / PHOTOBOOK</h3>
-				<p>Visual Memories is a photography book that showcases my own photography. It will include a short introduction of each album and multiple photos of the album. The photos will include portrait, landscape, and nature.</p>
+				<p>Visual Memories is a photography book that showcases my own photography. It will include a short introduction of each album and multiple photos of the album. The photos will include portraits, landscapes, and nature.</p>
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/pb-1.png" alt="Cycler">
+					<img src="img/pb-1.png" alt="Photo book pages">
 				</li>
 				<li>
-					<img src="img/pb-2.png" alt="Berries">
+					<img src="img/pb-2.png" alt="Photo book cover">
 				</li>
 			</ul>
 		</div>
