Changed logo and adjusted website

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	</section>
 	 
 	<section id="portfolio" class="portfolio grid">
-		<h1>PORTFOLIO</h1>
+		<h1><i>PORTFOLIO</i></h1>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
 				<h3>YUSSO / ARTIST PROMO PORTRAITS</h3>
