Changed padding on logo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<section class="top">
 		<div class="nav-logo">
-			<a class="small-logo" href="index.html"><img src="img/logo.svg" alt="Logo Navigation"></a>
+			<a href="index.html"><img src="img/logo.svg" alt="Logo Navigation"></a>
 			<ul>
 				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
 			</ul>
