--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 		<h1>HELLO AND WELCOME</h1>
 		<p>My name is <i>Katie Situ</i> and I am a versatile designer and photographer. I currently reside in Ottawa, Canada where I study Graphic Design. As a designer with many interests within the art industry, I strive to be as versatile as possible. I love to learn and discover. I am open-minded and always up for a challenge. Graphic Design is my passion and Photography is my peace, but I will always strive to be great at both.</p>
 	</div>
-	<div class="unit unit-s-1-icon unit-m-1-3">
+	<div class="unit unit-s-1 unit-m-1-3">
 			<img class="icon" src="img/graphic-design.svg" alt="">
 			<h4>GRAPHIC &#38; WEB DESIGN</h4>
 		</div>
-		<div class="unit unit-s-1-icon unit-m-1-3">
+		<div class="unit unit-s-1 unit-m-1-3">
 			<img class="icon" src="img/photography.svg" alt="">
 			<h4>PHOTOGRAPHY</h4>
 		</div>
-		<div class="unit unit-s-1-icon unit-m-1-3">
+		<div class="unit unit-s-1 unit-m-1-3">
 			<img class="icon" src="img/illustration.svg" alt="">
 			<h4>ILLUSTRATION</h4>
 		</div>
@@ -144,22 +144,19 @@
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/other-1.png" alt="HONG KONG LADY">
+					<img src="img/other-9.png" alt="HONG KONG LADY">
 				</li>
 				<li>
-					<img src="img/other-2.png" alt="CYCLER">
+					<img src="img/other-1.png" alt="CYCLER">
 				</li>
 				<li>
-					<img src="img/other-3.png" alt="BERRIES">
+					<img src="img/other-2.png" alt="BERRIES">
 				</li>
 				<li>
-					<img src="img/other-4.png" alt="FERRY STREET">
+					<img src="img/other-3.png" alt="FERRY STREET">
 				</li>
 				<li>
-					<img src="img/other-7.png" alt="GRASS AND FLOWERS">
-				</li>
-				<li>
-					<img src="img/other-9.png" alt="HONG KONG CARS">
+					<img src="img/other-7.png" alt="HONG KONG CARS">
 				</li>
 			</ul>
 		</div>
