Added new photos to website

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
 				<h3>YUSSO / ARTIST PROMO PORTRAITS</h3>
-				<p>A photoshoot of Ottawa-based rapper, Yusso taken for identity promotion. Photos will be used through social media for self-promotion and other promotional use.</p>
+				<p>Photoshoot of Ottawa-based rapper, Yusso taken for identity promotion. Photography is used through social media for self-promotion and other promotional use for the artist.</p>
 			</div>
   			<ul class="slides">
 				<li>
@@ -90,8 +90,8 @@
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
-				<h3>JEM &#38; DANI / MODEL PORTRAITS</h3>
-				<p>Photoshoots of local models to promote fashion and beauty. These photos can be used for magazines, posters and modeling portfolios.</p>
+				<h3>MODEL PORTRAITS</h3>
+				<p>Portrait photography of local models to promote fashion and beauty. Photography can be used for magazines, posters and modeling portfolios.</p>
 			</div>
   			<ul class="slides">
 				<li>
@@ -110,19 +110,11 @@
 					<img src="img/dani-7.png" alt="DANI">
 				</li>
 				<li>
-					<img src="img/dani-66.png" alt="DANI">
+					<img src="img/dani-3.png" alt="DANI">
 				</li>
 				<li>
 					<img src="img/dani-5.png" alt="DANI">
 				</li>
-			</ul>
-		</div>
-		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<div class="photo-caption">
-			<h3>AYMI &#38; KELLY / MODEL PORTRAITS</h3>
-				<p>Photoshoots of local models to promote fashion and beauty. These photos can be used for magazines, posters and modeling portfolios.</p>
-			</div>
-  			<ul class="slides">
 				<li>
 					<img src="img/twin-4.png" alt="AYMI">
 				</li>
@@ -133,14 +125,43 @@
 					<img src="img/twin-5.png" alt="AYMI">
 				</li>
 				<li>
-					<img src="img/twin-1.png" alt="AYMI">
+					<img src="img/jem-100.png" alt="AYMI">
+				</li>
+				<li>
+					<img src="img/v-1.png" alt="AYMI">
+				</li>
+				<li>
+					<img src="img/v-2.png" alt="AYMI">
+				</li>
+			</ul>
+		</div>
+		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
+			<div class="photo-caption">
+				<h3>CONCERT IPHONEOGRAPHY</h3>
+				<p>iPhone photography of various artists performing. Photography was taken with an iPhone.</p>
+			</div>
+  			<ul class="slides">
+				<li>
+					<img src="img/concert-3.png" alt="HONG KONG LADY">
+				</li>
+				<li>
+					<img src="img/concert-4.png" alt="CYCLER">
+				</li>
+				<li>
+					<img src="img/concert-8.png" alt="BERRIES">
+				</li>
+				<li>
+					<img src="img/concert-7.png" alt="FERRY STREET">
+				</li>
+				<li>
+					<img src="img/concert-6.png" alt="HONG KONG CARS">
 				</li>
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
 				<h3>LANDSCAPE &#38; NATURE PHOTOGRAPHY</h3>
-				<p>A variety of street photography, landscapes and nature. These photos were taken on travels and personal adventures.</p>
+				<p>Variety of street, landscapes and nature photography. Photography was taken on travels and personal adventures.</p>
 			</div>
   			<ul class="slides">
 				<li>
@@ -163,17 +184,17 @@
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
 				<h3>XANDER SITU / LOGO DESIGN</h3>
-				<p>A grunge-street style design to represent Ottawa-based DJ, Xander Situ. The design was based on a certain style with <i>paint splats</i> to create a grunge feel. The logo design can be used for promotional merchandising and event posters.</p>
+				<p>This hand illustrated grunge/street style design serves as a identity logo to represent Ottawa-based DJ, Xander Situ. The design was based on a certain style with <i>paint splats</i> to create a grunge feel. The main purpose of this logo is used for promotional merchandising and event posters.</p>
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/xs-1.png" alt="Business Card">
+					<img src="img/xs-3.png" alt="Business Card">
 				</li>
 				<li>
-					<img src="img/xs-2.png" alt="Stamp">
+					<img src="img/xs-1.png" alt="Stamp">
 				</li>
 				<li>
-					<img src="img/xs-3.png" alt="T-Shirt">
+					<img src="img/xs-4.png" alt="T-Shirt">
 				</li>
 			</ul>
 		</div>
@@ -184,16 +205,10 @@
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/bn-1.png" alt="Press Kit">
+					<img src="img/bn-4.png" alt="Poster">
 				</li>
 				<li>
-					<img src="img/bn-3.png" alt="Poster">
-				</li>
-				<li>
-					<img src="img/bn-2.png" alt="Vinyl">
-				</li>
-				<li>
-					<img src="img/bn-4.png" alt="Logo">
+					<img src="img/bn-2.png" alt="Poster">
 				</li>
 			</ul>
 		</div>
@@ -207,13 +222,19 @@
 					<img src="img/app-2.png" alt="Instrumentor Overview">
 				</li>
 				<li>
-					<img src="img/app-1.png" alt="Song List">
+					<img src="img/app-3.png" alt="Song List">
 				</li>
 				<li>
-					<img src="img/app-3.png" alt="Instrument Icons">
+					<img src="img/app-4.png" alt="Instrument Icons">
 				</li>
 				<li>
-					<img src="img/app-4.png" alt="Play and record">
+					<img src="img/app-5.png" alt="Play and record">
+				</li>
+				<li>
+					<img src="img/app-6.png" alt="Instrument Icons">
+				</li>
+				<li>
+					<img src="img/app-1.png" alt="Play and record">
 				</li>
 			</ul>
 		</div>
