Changed email contact

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 		<div>
 			<h1>LET'S WORK TOGETHER</h1>
 			<h4>Get in touch to collaborate on new projects.</h4>
-			<h4>info@katiesitu.ca</h4>
+			<h4>katie.situ@gmail.com</h4>
 			<ul class="social">
 				<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>
 				<li><a href="https://twitter.com/"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
@@ -266,7 +266,7 @@
 			</ul>
 			<a class="slideDown ease-all top-btn" href="#home"><img src="img/top.svg" alt="Top Button"></a>
 		</div>
-			<p>©2014 Katie Situ</p> 
+			<p>©2015 Katie Situ</p> 
 	</footer>
 	
 	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
