Fixed photo order

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<img src="img/jem-4.png" alt="JEM">
 				</li>
 				<li>
-					<img src="img/jem-1.png" alt="JEM">
+					<img src="img/v-2.png" alt="JEM">
 				</li>
 				<li>
 					<img src="img/jem-2.png" alt="JEM">
@@ -131,7 +131,7 @@
 					<img src="img/v-1.png" alt="AYMI">
 				</li>
 				<li>
-					<img src="img/v-2.png" alt="AYMI">
+					<img src="img/jem-1.png" alt="AYMI">
 				</li>
 			</ul>
 		</div>
