feat(html): add proper images for portfolio

--- a/index.html
+++ b/index.html
@@ -188,10 +188,13 @@
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/xs-3.png" alt="Business Card">
+					<img src="img/xs-1.png" alt="Business Card">
 				</li>
 				<li>
-					<img src="img/xs-1.png" alt="Stamp">
+					<img src="img/xs-2.png" alt="Stamp">
+				</li>
+				<li>
+					<img src="img/xs-3.png" alt="T-Shirt">
 				</li>
 				<li>
 					<img src="img/xs-4.png" alt="T-Shirt">
