refractor(html): update social links

--- a/index.html
+++ b/index.html
@@ -264,8 +264,9 @@
 			<h4>katie.situ@gmail.com</h4>
 			<ul class="social">
 				<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>
-				<li><a href="https://twitter.com/"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
-				<li><a href="https://www.behance.net/kaesitu"><i class="fa fa-behance"></i><span class="hide-text">Twitter</span></a></li>
+				<li><a href="https://twitter.com/situkd"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
+				<li><a href="https://www.behance.net/katiesitu"><i class="fa fa-behance"></i><span class="hide-text">Behance</span></a></li>
+				<li><a href="https://www.vimeo.com/katiesitu"><i class="fa fa-behance"></i><span class="hide-text">Vimeo</span></a></li>
 			</ul>
 			<a class="slideDown ease-all top-btn" href="#home"><img src="img/top.svg" alt="Top Button"></a>
 		</div>
