feat(css): adjust icon and its width

--- a/index.html
+++ b/index.html
@@ -45,21 +45,12 @@
 	</section>
 	
 	<section id="about" class="about grid">
-	<div class="intro">
+	<div class="intro unit unit-s-1 ">
 		<h1>HELLO AND WELCOME</h1>
 		<p>My name is <i>Katie Situ</i> and I am a versatile designer and photographer. I currently reside in Ottawa, Canada where I study Graphic Design. As a designer with many interests within the art industry, I strive to be as versatile as possible. I love to learn and discover. I am open-minded and always up for a challenge. Graphic Design is my passion and Photography is my peace, but I will always strive to be great at both.</p>
 	</div>
-	<div class="unit unit-s-1 unit-m-1-3">
-			<img class="icon" src="img/graphic-design.svg" alt="">
-			<h4>GRAPHIC &#38; WEB DESIGN</h4>
-		</div>
-		<div class="unit unit-s-1 unit-m-1-3">
-			<img class="icon" src="img/photography.svg" alt="">
-			<h4>PHOTOGRAPHY</h4>
-		</div>
-		<div class="unit unit-s-1 unit-m-1-3">
-			<img class="icon" src="img/illustration.svg" alt="">
-			<h4>ILLUSTRATION</h4>
+	<div class="unit unit-s-1 ">
+			<img class="icon" src="img/design-services.png" alt="">
 		</div>
 	</section>
 	 
@@ -266,7 +257,7 @@
 				<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>
 				<li><a href="https://twitter.com/situkd"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
 				<li><a href="https://www.behance.net/katiesitu"><i class="fa fa-behance"></i><span class="hide-text">Behance</span></a></li>
-				<li><a href="https://www.vimeo.com/katiesitu"><i class="fa fa-behance"></i><span class="hide-text">Vimeo</span></a></li>
+				<li><a href="https://www.vimeo.com/katiesitu"><i class="fa fa-vimeo-square"></i><span class="hide-text">Vimeo</span></a></li>
 			</ul>
 			<a class="slideDown ease-all top-btn" href="#home"><img src="img/top.svg" alt="Top Button"></a>
 		</div>
