feat(html): add new content for portfolio

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 	</section>
 	
 	<section id="about" class="about grid">
-	<div class="intro unit unit-s-1 ">
+	<div class="intro unit unit-s-1">
 		<h1>HELLO AND WELCOME</h1>
 		<p>My name is <i>Katie Situ</i> and I am a versatile designer and photographer. I currently reside in Ottawa, Canada where I study Graphic Design. As a designer with many interests within the art industry, I strive to be as versatile as possible. I love to learn and discover. I am open-minded and always up for a challenge. Graphic Design is my passion and Photography is my peace, but I will always strive to be great at both.</p>
 	</div>
-	<div class="unit unit-s-1 ">
+	<div class="unit unit-s-1">
 			<img class="icon" src="img/design-services.png" alt="">
 		</div>
 	</section>
@@ -199,10 +199,13 @@
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/bn-4.png" alt="Poster">
+					<img src="img/bn-2.png" alt="Poster">
 				</li>
 				<li>
-					<img src="img/bn-2.png" alt="Poster">
+					<img src="img/bn-3.png" alt="Poster">
+				</li>
+				<li>
+					<img src="img/bn-5.png" alt="Poster">
 				</li>
 			</ul>
 		</div>
@@ -234,15 +237,21 @@
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
-				<h3>VISUAL MEMORIES / PHOTOBOOK</h3>
-				<p>Visual Memories is a photography book that showcases my own photography. It will include a short introduction of each album and multiple photos of the album. The photos will include portraits, landscapes, and nature.</p>
+				<h3>HUNGRY SAMMY'S / LOGO REDESIGN</h3>
+				<p>Logo redesign for a local fast food pizza restaurant, Hungry Sammy's. The restaurant offers authentic Greek style fast food cuisine serving mainly pizza, subs, and wings.</p>
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/pb-1.png" alt="Photo book pages">
+					<img src="img/hungry-sammys-4.png" alt="Photo book pages">
 				</li>
 				<li>
-					<img src="img/pb-2.png" alt="Photo book cover">
+					<img src="img/hungry-sammys-2.png" alt="Photo book pages">
+				</li>
+				<li>
+					<img src="img/hungry-sammys-1.png" alt="Photo book pages">
+				</li>
+				<li>
+					<img src="img/hungry-sammys-3.png" alt="Photo book pages">
 				</li>
 			</ul>
 		</div>
@@ -252,7 +261,7 @@
 		<div>
 			<h1>LET'S WORK TOGETHER</h1>
 			<h4>Get in touch to collaborate on new projects.</h4>
-			<h4>katie.situ@gmail.com</h4>
+			<h5><strong>katie.situ@gmail.com</strong></h5>
 			<ul class="social">
 				<li><a href="https://www.facebook.com/katiesituphotography"><i class="fa fa-facebook"></i><span class="hide-text">Facebook</span></a></li>
 				<li><a href="https://twitter.com/situkd"><i class="fa fa-twitter"></i><span class="hide-text">Twitter</span></a></li>
