refractor(css): changed min-width for medium screen

--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@
 				</li>
 			</ul>
 		</div>
+	</section>
+		<section id="portfolio" class="portfolio grid">
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
 				<h3>XANDER SITU / LOGO DESIGN</h3>
@@ -200,48 +202,45 @@
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
-			<div class="photo-caption">
+		<div class="photo-caption">
 				<h3>INSTRUMENTOR / UI APP DESIGN</h3>
 				<p>Instrumentor is a digital mentoring app that lets growing musicians learn to play musical instruments. The design consists of strong and bold colours that hold a sense of motivation with its powerful palette. The design elements are very modern and minimalistic. Together, it creates a refreshingly daring personality that targets their audience. </p>
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/app-2.png" alt="Instrumentor Overview">
+					<img src="img/app-5.png" alt="Business Card">
 				</li>
 				<li>
-					<img src="img/app-3.png" alt="Song List">
+					<img src="img/app-2.png" alt="Stamp">
 				</li>
 				<li>
-					<img src="img/app-4.png" alt="Instrument Icons">
+					<img src="img/app-3.png" alt="T-Shirt">
 				</li>
 				<li>
-					<img src="img/app-5.png" alt="Play and record">
+					<img src="img/app-4.png" alt="T-Shirt">
 				</li>
 				<li>
-					<img src="img/app-6.png" alt="Instrument Icons">
-				</li>
-				<li>
-					<img src="img/app-1.png" alt="Play and record">
+					<img src="img/app-1.png" alt="T-Shirt">
 				</li>
 			</ul>
 		</div>
 		<div class="flexslider unit unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="photo-caption">
 				<h3>HUNGRY SAMMY'S / LOGO REDESIGN</h3>
-				<p>Logo redesign for a local fast food pizza restaurant, Hungry Sammy's. The restaurant offers authentic Greek style fast food cuisine serving mainly pizza, subs, and wings.</p>
+				<p>Logo redesign for a local fast food pizza restaurant, Hungry Sammy's. The restaurant offers authentic Greek style fast food cuisine serving mainly pizza, subs, and wings. </p>
 			</div>
   			<ul class="slides">
 				<li>
-					<img src="img/hungry-sammys-4.png" alt="Photo book pages">
+					<img src="img/hungry-sammys-1.png" alt="Poster">
 				</li>
 				<li>
-					<img src="img/hungry-sammys-2.png" alt="Photo book pages">
+					<img src="img/hungry-sammys-2.png" alt="Poster">
 				</li>
 				<li>
-					<img src="img/hungry-sammys-1.png" alt="Photo book pages">
+					<img src="img/hungry-sammys-4.png" alt="Poster">
 				</li>
 				<li>
-					<img src="img/hungry-sammys-3.png" alt="Photo book pages">
+					<img src="img/hungry-sammys-3.png" alt="Poster">
 				</li>
 			</ul>
 		</div>
